--- a/Payroll_/CurAttendance.xaml
+++ b/Payroll_/CurAttendance.xaml
@@ -81,7 +81,7 @@
     
         <Controls:Flyout Header="Actions"
                         Name="FlyOut"
-                        IsOpen="false"
+                        IsOpen="False"
                        
                         Position="right"
                         Theme="Adapt" 
