--- a/Payroll_/App.xaml
+++ b/Payroll_/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Payroll_.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="PPeriod.xaml">
+             StartupUri="MainWindow.xaml">
     <!-- PPeriod  CalAttendance CurAttendance AttDownload EmpSchedule -->
     <Application.Resources>
         <ResourceDictionary>
